# pixel

./: .gitignore  README.md  pyproject.toml
src/pixel/: __main__.py  commons.py  dataclasses.py  variables.py
src/pixel/api/: drawer.py  widgets.py
src/pixel/authorization/: auth.py
src/pixel/cache/: cache_manager.py
src/pixel/cli/: executor.py  runner.py  starter.py
src/pixel/observer/: observer.py
src/pixel/router/: router.py
src/pixel/web/: exceptions.py  processors.py  specification.py  starter.py  web.py
src/pixel/web/static/: index.html  login.html  styles.css
src/pixel/widget_manager/: widget_manager.py
